# (C) Copyright 2020 UCAR.
#
# This software is licensed under the terms of the Apache Licence Version 2.0
# which can be obtained at http://www.apache.org/licenses/LICENSE-2.0.

# Buggy. Disabled.

include(Targets)

#add_executable(ioda-test-types ioda-test-types.cpp)
#addapp(ioda-test-types)
#target_link_libraries(ioda-test-types PUBLIC ioda_engines)

#if(BUILD_TESTING)
#    add_test(NAME ioda-test-types COMMAND ioda-test-types)
#endif()

